Datatypes in dbi files depend on db/driver that is used Case: SVY-335